--- a/css/footer.css
+++ b/css/footer.css
@@ -43,3 +43,14 @@
   -webkit-text-fill-color: transparent;
   color: rgb(255, 255, 255);
 }
+
+@media (max-width: 800px) {
+  .footer-container {
+    grid-template-columns: 1fr;
+    gap: 40px;
+  }
+
+  .footer-contato li {
+    font-size: 1.5rem;
+  }
+}
