--- a/css/footer.css
+++ b/css/footer.css
@@ -19,11 +19,12 @@
 }
 
 .footer-contato li {
-  font-weight: bold;
-  font-size: 1.8rem;
+  /* font-weight: bold; */
+  font-size: 1.5rem;
   line-height: 1.1;
   color: #fff;
   margin-bottom: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer-contato li a {
@@ -34,6 +35,7 @@
   grid-column: 1 / -1;
   font-size: 1.125rem;
   color: #8f8f8f;
+  text-align: center;
 }
 
 .footer-contato li p {
@@ -42,6 +44,11 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   color: rgb(255, 255, 255);
+}
+
+.link-email {
+  text-decoration: none;
+  color: #67dd0a;
 }
 
 @media (max-width: 800px) {
