--- a/css/footer.css
+++ b/css/footer.css
@@ -4,22 +4,29 @@
 
 .footer-container {
   max-width: 1200px;
-  padding: 120px 20px 60px 20px;
+  padding: 90px 20px 30px 20px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 100px;
-  align-items: center;
+  gap: 20px;
 }
 
 .footer-texto {
   font-size: 1.5rem;
   line-height: 1.33;
   color: #ccc;
+  text-align: center;
 }
 
 .footer-texto span {
   color: #67dd0a;
+}
+
+.footer-contato {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px 20px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 .footer-contato li {
@@ -28,31 +35,26 @@
   line-height: 1.1;
   margin-bottom: 30px;
   font-family: Arial, Helvetica, sans-serif;
-  padding: 25px;
-  align-items: center;
-}
-
-.footer-contato a:hover {
-  color: #67dd0a;
-  transition: 0.5s;
 }
 
 .footer-contato a {
   text-decoration: none;
   color: #ccc;
-  padding-left: 25px;
+  padding-left: 60px;
 }
 
-.footer-contato li:nth-child(1) {
-  background: url("../img/email-40px.svg") no-repeat 0px 18px;
+.footer-contato img {
+  position: absolute;
+  margin-top: 5px;
+}
+.footer-contato span {
+  position: relative;
+  top: 50%;
 }
 
-.footer-contato li:nth-child(2) {
-  background: url("../img/telefone-40px.svg") no-repeat 0px 18px;
-}
-
-.footer-contato li:nth-child(3) {
-  background: url("../img/linkedin-45px.svg") no-repeat 0px 13px;
+.footer-contato a:hover {
+  color: #67dd0a;
+  transition: 0.5s;
 }
 
 .footer-copy a {
@@ -73,29 +75,28 @@
 }
 
 @media (max-width: 800px) {
-  .footer-container {
+  .footer-contato {
     grid-template-columns: 1fr;
-    gap: 40px;
-  }
-
-  .footer-contato a {
-    font-size: 1.5rem;
+    display: flex;
     justify-content: center;
+    overflow: hidden;
   }
 
   .footer-contato li {
-    padding: 10px;
+    padding: 15px;
   }
 
-  .footer-contato li:nth-child(1) {
-    background: url("../img/email-27px.svg") no-repeat 0px 13px;
+  .footer-contato span {
+    display: none;
   }
 
-  .footer-contato li:nth-child(2) {
-    background: url("../img/telefone-27px.svg") no-repeat 0px 13px;
+  .footer-contato img {
+    -webkit-transition: -webkit-transform 0.5s ease;
+    transition: transform 0.5s ease;
   }
 
-  .footer-contato li:nth-child(3) {
-    background: url("../img/linkedin-27px.svg") no-repeat 0px 13px;
+  .footer-contato img:hover {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
   }
 }
