--- a/css/header.css
+++ b/css/header.css
@@ -1,26 +1,79 @@
+body {
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header-bg {
+  background-color: #111111;
+}
+
 .header {
-  max-width: 1200px;
-  padding: 40px 20px;
-  margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
+  padding: 20px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header-menu {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
   justify-content: center;
 }
 
 .header-menu a {
-  font-size: 1.125rem;
-  line-height: 1.3;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: #141414;
+  color: #ffffff;
+  display: inline-block;
+  padding: 16px 0px;
+  font-size: 18px;
+  position: relative;
+}
+
+.header-menu a:after {
+  content: "";
   display: block;
+  height: 2px;
+  width: 0px;
+  background: #67dd0a;
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
+}
+
+.header-menu a:hover:after {
+  width: 100%;
+}
+
+.header-menu li {
+  gap: 20px;
+}
+
+.img-container img {
+  width: 90%;
+  height: 90%;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+}
+
+.img-container:hover img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 @media (max-width: 800px) {
@@ -31,7 +84,16 @@
   }
 
   .header a {
-    background: #f5f5f5;
+    background: #161616;
     border-radius: 5px;
+    padding: 12px 16px;
+  }
+
+  .header a:hover {
+    background-color: #2e2e2e;
+  }
+
+  .header a:after {
+    display: none;
   }
 }
