--- a/css/introducao.css
+++ b/css/introducao.css
@@ -59,7 +59,13 @@
   .introducao {
     grid-template-columns: 1fr;
   }
-  .introducao img {
+  /* .introducao img {
     display: none;
+  } */
+  .introducao img {
+    height: 70%;
+    width: 70%;
+    margin-left:auto;
+    margin-right:auto;
   }
 }
