início do novo layout do portfolio; servico de envio de email iniciado

--- a/css/header.css
+++ b/css/header.css
@@ -67,12 +67,15 @@ a {
 .img-container img {
   width: 90%;
   height: 90%;
+  border-radius: 30px;
+  background: #e0e0e0;
+  box-shadow: 10px 30px 20px #c4c4c4;
   -webkit-transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
 }
 
 .img-container:hover img {
-  -webkit-transform: scale(1.1);
+  -webkit-transform: scale(1.0);
   transform: scale(1.1);
 }
 
@@ -96,4 +99,81 @@ a {
   .header a:after {
     display: none;
   }
+}
+
+/* From uiverse.io by @menezes11 */
+button {
+  position: relative;
+  padding: 0.5em 1em;
+  outline: none;
+  border: none;
+  background: NONE;
+  color: #e0e0e0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 15px;
+  overflow: hidden;
+  transition: 0.2s;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button span {
+  position: absolute;
+}
+
+button span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #aedded);
+}
+
+button:hover span:nth-child(1) {
+  left: 100%;
+  transition: 0.7s;
+}
+
+button span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #2e8eae);
+}
+
+button:hover span:nth-child(3) {
+  right: 100%;
+  transition: 0.7s;
+  transition-delay: 0.35s;
+}
+
+button span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #196883);
+}
+
+button:hover span:nth-child(2) {
+  top: 100%;
+  transition: 0.7s;
+  transition-delay: 0.17s;
+}
+
+button span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #042b38);
+}
+
+button:hover span:nth-child(4) {
+  bottom: 100%;
+  transition: 0.7s;
+  transition-delay: 0.52s;
 }
