--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,6 @@
 @import "experiencia.css";
 @import "formacao.css";
 @import "footer.css";
+@import "form.css";
+@import "btn-back-to-top.css";
+@import "animations.css";
