--- a/css/footer.css
+++ b/css/footer.css
@@ -21,42 +21,6 @@
   color: #0aa8dd;
 }
 
-.footer-contato {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px 20px;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.footer-contato li {
-  list-style-type: none;
-  font-size: 1.5rem;
-  line-height: 1.1;
-  margin-bottom: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.footer-contato a {
-  text-decoration: none;
-  color: #ccc;
-  padding-left: 60px;
-}
-
-.footer-contato img {
-  position: absolute;
-  margin-top: 5px;
-}
-.footer-contato span {
-  position: relative;
-  top: 50%;
-}
-
-.footer-contato a:hover {
-  color: #0aa8dd;
-  transition: 0.5s;
-}
-
 .footer-copy a {
   text-decoration: none;
   color: #0aa8dd;
@@ -85,11 +49,12 @@
   color: #0aa8dd;
 }
 
-.footer input,
-.footer textarea,
-.footer button {
-  background: #c0c0c0;
-  border: 1px solid black;
+.back-to-top {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 60px;
 }
 
 @media (max-width: 800px) {
