--- a/css/introducao.css
+++ b/css/introducao.css
@@ -1,6 +1,6 @@
 .introducao {
   max-width: 1200px;
-  padding: 40px 20px;
+  padding: 70px 20px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -30,6 +30,21 @@
 .introducao p {
   font-size: 2rem;
   color: #525252;
+}
+
+.img-container img {
+  width: 90%;
+  height: 90%;
+  border-radius: 30px;
+  background: #e0e0e0;
+  box-shadow: 10px 30px 20px #c4c4c4;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+}
+
+.img-container:hover img {
+  -webkit-transform: scale(1.0);
+  transform: scale(1.1);
 }
 
 @media (max-width: 1000px) {
