--- a/css/btn-back-to-top.css
+++ b/css/btn-back-to-top.css
@@ -1,5 +1,15 @@
 /* From uiverse.io by @satyamchaudharydev */
+
+.back-to-top {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 60px 0;
+}
+
 .btn-back-to-top {
+  cursor: pointer;
   width: 140px;
   height: 56px;
   overflow: hidden;
