--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "Fira Sans", Arial, sans-serif;
+  user-select: none;
+  font-family: "Source Code Pro", monospace;
   margin: 0px;
   color: #141414;
 }
