--- a/css/header.css
+++ b/css/header.css
@@ -20,7 +20,6 @@ a {
 .header {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
@@ -62,28 +61,6 @@ a {
 
 .header-menu li {
   gap: 20px;
-}
-
-@media (max-width: 800px) {
-  .header {
-    flex-direction: column;
-    gap: 40px;
-    padding: 20px;
-  }
-
-  .header a {
-    background: #161616;
-    border-radius: 5px;
-    padding: 12px 16px;
-  }
-
-  .header a:hover {
-    background-color: #2e2e2e;
-  }
-
-  .header a:after {
-    display: none;
-  }
 }
 
 /* From uiverse.io by @menezes11 */
@@ -161,4 +138,34 @@ a {
   bottom: 100%;
   transition: 0.7s;
   transition-delay: 0.52s;
+}
+
+@media (max-width: 835px) {
+  .header a {
+    background: #161616;
+    border-radius: 5px;
+    padding: 8px 12px;
+  }
+
+  .header a:hover {
+    background-color: #2e2e2e;
+  }
+
+  .header a:after {
+    display: none;
+  }
+
+  .nav-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    gap: 5px;
+  }
+}
+
+@media (max-width: 860px) {
+  .nav-buttons {
+    display: none;
+  }
 }
