--- a/css/introducao.css
+++ b/css/introducao.css
@@ -73,6 +73,7 @@
 @media (max-width: 400px) {
   .introducao {
     grid-template-columns: 1fr;
+    padding: 20px;
   }
   .introducao img {
     display: none;
