--- a/css/scroll-animation.css
+++ b/css/scroll-animation.css
@@ -12,7 +12,7 @@
 }
 
 [data-anime="left"] {
-  transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-70px, 0, 0);
 }
 
 [data-anime="right"] {
