--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,7 @@
 @import "formacao.css";
 @import "footer.css";
 @import "btn-back-to-top.css";
-@import "animations.css";
+@import "scroll-animation.css";
+@import "hamburguer.css";
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900");
+@import url("https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700&display=swap");
