--- a/css/footer.css
+++ b/css/footer.css
@@ -128,6 +128,7 @@
   border-left: none;
   border-bottom: none;
   border-right: none;
+  box-sizing: border-box;
 }
 
 .input-group .input-field:focus,
@@ -153,6 +154,16 @@
 
 .textarea {
   resize: none;
+  border-color: rgba(62, 62, 62, 0.416);
+}
+
+#validate-result {
+  color: #fff;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  font: italic small-caps normal 12px "Lato", sans-serif;
 }
 
 /* Begin Right Contact Page */
@@ -161,6 +172,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  color: #fff;
 }
 
 /* Location, Phone, Email Section */
@@ -252,17 +264,13 @@
 }
 
 .social-media-list li:hover {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.416);
 }
 
 .social-media-list li:hover:after {
   opacity: 1;
   transform: scale(1.12);
   transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
-}
-
-.social-media-list li:hover a {
-  color: #000;
 }
 
 .copyright {
@@ -274,6 +282,7 @@
 
 hr {
   border-color: rgba(255, 255, 255, 0.6);
+  width: 100%;
 }
 
 /* .send-button */
@@ -418,7 +427,6 @@ hr {
     height: 55px;
     width: 55px;
     line-height: 55px;
-    font-size: 2rem;
   }
 
   .social-media-list li:after {
