--- a/css/header.css
+++ b/css/header.css
@@ -19,7 +19,6 @@ a {
 
 .header {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
@@ -140,6 +139,34 @@ a {
   transition-delay: 0.52s;
 }
 
+.button-expand {
+  display: none;
+  z-index: 100;
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: '';
+  width: 100%;
+  height: 10px;
+  background: #525252;
+  -webkit-transition: all .5s ease-out;
+  transition: all .5s ease-out;
+}
+
+.button-expand > i {
+  height: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #797979;
+}
+
+.button-down {
+  -webkit-transition: all .5s ease-out;
+  transition: all .5s ease-out;
+  top: 84px;
+}
+
 @media (max-width: 835px) {
   .header a {
     background: #161616;
@@ -167,5 +194,13 @@ a {
 @media (max-width: 860px) {
   .nav-buttons {
     display: none;
+  }
+
+  .button-expand {
+    display: inherit;
+  }
+
+  .header {
+    justify-content: center;
   }
 }
