--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,6 @@
 @import "footer.css";
 @import "btn-back-to-top.css";
 @import "scroll-animation.css";
-@import "navbar.css";
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900");
 @import url("https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,600,700&display=swap");
