--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,18 @@ body {
   color: #141414;
 }
 
+body::-webkit-scrollbar {
+  width: 7px;
+  /* background: #0aa8dd; */
+  background: #525252;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #0aa8dd;
+  /* background: #525252; */
+  border-radius: 5px;
+}
+
 h1,
 h2,
 h3,
@@ -18,11 +30,11 @@ ul {
   list-style: none;
 }
 
-img {
+/* img {
   display: block;
   max-width: 100%;
   height: auto;
-}
+} */
 
 .subtitulo {
   font-size: 8rem;
