--- a/css/header.css
+++ b/css/header.css
@@ -15,9 +15,16 @@ a {
 
 .header-bg {
   background-color: #111111;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  z-index: 1;
+  height: 90px;
 }
 
 .header {
+  height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,6 +33,10 @@ a {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  position: fixed;
+  width: 100%;
+  background: #111111;
+  z-index: 1;
 }
 
 .header-menu {
@@ -154,7 +165,7 @@ a {
 }
 
 .button-expand > i {
-  height: 7px;
+  height: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -164,7 +175,33 @@ a {
 .button-down {
   -webkit-transition: all .5s ease-out;
   transition: all .5s ease-out;
-  top: 84px;
+  top: 80px;
+}
+
+.title-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-header .name {
+  width: 100%;
+  color: white;
+  font-size: 41px;
+  font-weight: bold;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.title-header .name > span {
+  color: #0aa8dd;
+}
+
+.title-header .function {
+  width: 100%;
+  color: #a3a3a3;
+  font-size: 20px;
+  letter-spacing: 4px;
 }
 
 @media (max-width: 835px) {
@@ -202,5 +239,122 @@ a {
 
   .header {
     justify-content: center;
+  }
+
+  .title-header .name {
+    font-size: 30px;
+  }
+
+  .title-header .function {
+    font-size: 13px;
+  }
+}
+
+/* navbar */
+nav .nav {
+  margin: 0;
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  right: 0;
+  top: -88px;
+  -webkit-transition: all .5s ease-in;
+  transition: all .5s ease-in;
+  -webkit-box-shadow: 0px -10px 20px black;
+  box-shadow: 0px -10px 20px black;
+  z-index: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+nav .nav.navshow {
+  transform: scaleY(0);
+  transform-origin: top;
+  -webkit-transition: all .5s ease-out;
+  transition: all .5s ease-out;
+  top: 0;
+  background-color: #111111;
+}
+
+nav .nav .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 10px;
+}
+
+nav .nav .menu .menu-item {
+  color: #848484;
+  list-style: none;
+  width: 30%;
+  min-width: 60px;
+  max-width: 250px;
+  letter-spacing: 4px;
+  height: 50px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  position: relative;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 400;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+@media (max-width: 799px) {
+  nav .nav .menu .menu-item {
+    font-size: 13px;
+    letter-spacing: 1px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 860px) {
+  nav .nav.navshow {
+    -webkit-transition: all .5s ease-out;
+    transition: all .5s ease-out;
+    top: 0;
+    background-color: #111111;
+  }
+}
+
+@media (max-width: 799px) {
+  nav .nav .menu .menu-item:hover {
+    letter-spacing: 2px;
+    color: #848484;
+  }
+}
+
+nav .nav .menu .menu-item:hover:after {
+  width: 35px;
+}
+
+@media (max-width: 799px) {
+  nav .nav .menu .menu-item:hover:after {
+    width: 0px;
   }
 }
