--- a/css/footer.css
+++ b/css/footer.css
@@ -285,64 +285,61 @@ hr {
   width: 100%;
 }
 
-/* .send-button */
 .send-button {
+  padding: 0;
+  outline: 0;
+  border: 0;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 35px;
-  font-family: inherit;
-  font-size: 20px;
-  background: #0aa8dd;
-  color: white;
-  padding: 0.7em 1em;
-  padding-left: 0.9em;
+  height: 34px;
+  border-radius: 0.5em;
+  box-shadow: 0 0.625em 1em 0 rgba(30, 143, 255, 0.35);
+  overflow: hidden;
+}
+
+.send-button .send-button-div {
+  transform: translateY(0px);
+  width: 100%;
+}
+
+.send-button,
+.send-button .send-button-div {
+  transition: 0.6s cubic-bezier(.16, 1, .3, 1);
+}
+
+.send-button .send-button-div .send-button-span {
   display: flex;
   align-items: center;
-  border: none;
-  border-radius: 16px;
-  overflow: hidden;
-  transition: all 0.2s ease-in-out;
-}
-
-.send-button span {
-  display: block;
-  margin-left: 0.3em;
-  transition: all 0.3s ease-in-out;
-}
-
-.send-button svg {
-  display: block;
-  transform-origin: center center;
-  transition: transform 0.3s ease-in-out;
-}
-
-.send-button {
-  cursor: pointer;
-  margin-top: 15px;
-  height: 34px;
-  width: 100%;
-  overflow: hidden;
-  transition: all .2s ease-in-out;
-}
-
-.alt-send-button {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
   justify-content: center;
-  padding-top: 23px;
   height: 34px;
-  transition: all .2s ease-in-out;
+  /* padding: 0.75em 1.125em; */
 }
 
-.send-text {
-  display: block;
-  margin-top: 10px;
-  font: 700 12px 'Lato', sans-serif;
-  letter-spacing: 2px;
+.send-button .send-button-div:nth-child(1) {
+  background-color: #1e90ff;
 }
 
-.alt-send-button:hover {
-  transform: translate3d(0px, -29px, 0px);
+.send-button .send-button-div:nth-child(2) {
+  background-color: #21dc62;
+}
+
+.send-button:hover {
+  box-shadow: 0 0.625em 1em 0 rgba(33, 220, 98, 0.35);
+}
+
+.send-button:hover .send-button-div {
+  transform: translateY(-34px);
+}
+
+.send-button .send-button-p {
+  font-size: 15px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.send-button:active {
+  transform: scale(0.95);
 }
 
 @keyframes fly-1 {
