--- a/css/formacao.css
+++ b/css/formacao.css
@@ -25,7 +25,7 @@
 }
 
 .formacao .subtitulo {
-  color: #000000;
+  color: #4d4d4d;
   max-width: 5ch;
 }
 
@@ -44,8 +44,8 @@
 .formação-content .texto {
   font-size: 1.3rem;
   line-height: 1.2;
-  max-width: 50ch;
-  color: #a3a3a3;
+  width: 100%;
+  color: #e2e2e2;
 }
 
 .formação-content .texto strong {
@@ -56,7 +56,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 60px;
 }
 
 .faculdade {
@@ -71,7 +70,7 @@
 .faculdade-tipo {
   font-size: 0.875rem;
   text-transform: uppercase;
-  color: #a3a3a3;
+  color: #e2e2e2;
   margin-bottom: 10px;
 }
 
@@ -88,14 +87,14 @@
   display: block;
   width: 4px;
   height: 20px;
-  background: linear-gradient(#45c4ef, #0aa8dd);
+  background: #e2e2e2;
   position: absolute;
   left: -24px;
 }
 
 .faculdade-instituicao {
   font-size: 1.125rem;
-  color: #a3a3a3;
+  color: #e2e2e2;
 }
 
 .cursos {
@@ -104,6 +103,7 @@
 
 .formacao-extra {
   max-width: 1200px;
+  padding: 0 20px 0 60px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -200,6 +200,12 @@
 
 @media (max-width: 800px) {
   .formacao-container {
+    grid-template-columns: 1fr;
+    padding: 60px 20px;
+    gap: 40px;
+  }
+
+  .formacao-extra {
     grid-template-columns: 1fr;
     padding: 60px 20px;
     gap: 40px;
