--- a/css/introducao.css
+++ b/css/introducao.css
@@ -20,7 +20,7 @@
   position: relative;
 }
 
-.introducao h1::before {
+/* .introducao h1::before {
   content: "";
   display: block;
   width: 130px;
@@ -30,7 +30,7 @@
   top: -15px;
   left: -40px;
   z-index: -1;
-}
+} */
 
 .introducao p {
   font-size: 2rem;
@@ -106,6 +106,16 @@
 
 .button-download:active {
   transform: translate(0em, 0.2em);
+}
+
+/* svg */
+
+.svg-details-introdution {
+  height: 500px;
+  position: absolute;
+  right: 180px;
+  z-index: -1;
+  opacity: 0.1;
 }
 
 @media (max-width: 1000px) {
